# python-cinderclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.md  CONTRIBUTING.rst  HACKING  HACKING.rst  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pylintrc  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
cinderclient/: __init__.py  _i18n.py  api_versions.py  auth_plugin.py  base.py  client.py  exceptions.py  extension.py  service_catalog.py  shell.py  shell_utils.py  utils.py
cinderclient/apiclient/: base.py  client.py  exceptions.py  fake_client.py
cinderclient/contrib/: noauth.py
cinderclient/tests/: fakes.py  test_base.py  test_client.py  test_http.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
cinderclient/v1/: __init__.py  availability_zones.py  client.py  limits.py  qos_specs.py  quota_classes.py  quotas.py  services.py  shell.py  volume_backups.py  volume_encryption_types.py  volume_snapshots.py  volume_transfers.py  volume_types.py  volumes.py
cinderclient/v2/: __init__.py  availability_zones.py  capabilities.py  cgsnapshots.py  client.py  consistencygroups.py  limits.py  pools.py  qos_specs.py  quota_classes.py  quotas.py  services.py  shell.py  volume_backups.py  volume_backups_restore.py  volume_encryption_types.py  volume_snapshots.py  volume_transfers.py  volume_type_access.py  volume_types.py  volumes.py
cinderclient/v3/: __init__.py  attachments.py  availability_zones.py  capabilities.py  cgsnapshots.py  client.py  clusters.py  consistencygroups.py  default_types.py  group_snapshots.py  group_types.py  groups.py  limits.py  messages.py  pools.py  qos_specs.py  quota_classes.py  quotas.py  resource_filters.py  services.py  shell.py  shell_base.py  volume_backups.py  volume_backups_restore.py  volume_encryption_types.py  volume_snapshots.py  volume_transfers.py  volume_type_access.py  volume_types.py  volumes.py  volumes_base.py  workers.py
doc/: Makefile  requirements.txt
doc/ext/: cli.py
doc/source/: api.rst  conf.py  functional_tests.rst  index.rst  shell.rst  unit_tests.rst
docs/: Makefile  conf.py  releases.rst  shell.rst
docs/ref/: backup_schedules.rst  images.rst  ipgroups.rst  servers.rst
playbooks/: python-cinderclient-functional.yaml
releasenotes/notes/: add-generic-reset-state-command-d83v1f3accbf5807.yaml  adding-option-is-public-to-type-list-9a16bd9c2b8eb65a.yaml  attachment-create-optional-server-id-9299d9da2b62b263.yaml  attachment-mode-8427aa6a2fa26e70.yaml  backup-user-id-059ccea871893a0b.yaml  bug-1608166-ad91a7a9f50e658a.yaml  bug-1675973-ad91a7a9f50e658a.yaml  bug-1675974-34edd5g9870e65b2.yaml  bug-1675975-ad91a7a34e0esywc.yaml  bug-1705093-9bc782d44018c27d.yaml  bug-1713082-fb9276eed70f7e3b.yaml  bug-1826286-c9b68709a0d63d06.yaml  bug-1867061-fix-py-raw-error-msg-ff3c6da0b01d5d6c.yaml  bug-1915996-3aaa5e2548eb7c93.yaml  bug-1995883-force-flag-none-3a7bb87f655bcf42.yaml  bug-1998596-5cac70cc68b3d6a5.yaml  cinder-poll-4f92694cc7eb657a.yaml  cinderclient-5-de0508ce5a221d21.yaml  cli-api-ver-negotiation-9f8fd8b77ae299fd.yaml  cluster_commands-dca50e89c9d53cd2.yaml  cluster_list_manageable-40c02489b2c95d55.yaml  cluster_migration_manage-31144d67bbfdb739.yaml  collect-timing-ce6d521d40d422fb.yaml  deprecate-allow-multiattach-2213a100c65a95c1.yaml  do-not-reset-volume-status-ae8e28132d7bfacd.yaml  drop-python-3-6-and-3-7-fe2dc753e456b527.yaml  drop-python2-support-d3a1bedc75445edc.yaml  drop-v2-support-e578ca21c7c6b532.yaml  enhance-backup-restore-shell-command-0cf55df6ca4b4c55.yaml  feature-cross-az-backups-9d428ad4dfc552e1.yaml  fix-transfer-delete-multiple-transfer-43a76c403e7c7e7c.yaml  http_log_debug-ff023f069afde3fe.yaml  list-with-count-78gtf45r66bf8912.yaml  log-request-id-148c74d308bcaa14.yaml  messages-v3-api-3da81f4f66bf5903.yaml  noauth-7d95e5af31a00e96.yaml  profile-as-environment-variable-2a5c666ef759e486.yaml  project-default-types-727156d1db10a24d.yaml  reimage-volume-fea3a1178662e65a.yaml  remove-cg-quota-9d4120b62f09cc5c.yaml  (+29 more)
releasenotes/source/: conf.py  index.rst  train.rst
tests/: fakes.py  test_base.py  test_client.py  test_http.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
tests/v1/: fakes.py  test_auth.py  test_limits.py  test_quota_classes.py  test_quotas.py  test_shell.py  test_types.py  test_volume_backups.py  test_volumes.py
tests/v2/: fakes.py  test_auth.py  test_quota_classes.py  test_quotas.py  test_shell.py  test_types.py  (+2 more)
tools/: cinder.bash_completion  colorizer.py  install_venv.py  install_venv_common.py  lintstack.py  pip-requires  test-requires
(+155 files in other folders)
