[metadata]
name = python-cinderclient
summary = OpenStack Block Storage API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-cinderclient/latest/
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cinderclient

[entry_points]
console_scripts =
    cinder = cinderclient.shell:main

keystoneauth1.plugin =
    noauth = cinderclient.contrib.noauth:CinderNoAuthLoader
