[metadata]
name = python-cinderclient
summary = OpenStack Block Storage API Client Library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-cinderclient/latest/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    cinderclient

[entry_points]
console_scripts =
    cinder = cinderclient.shell:main

keystoneauth1.plugin =
    noauth = cinderclient.contrib.noauth:CinderNoAuthLoader
